<LinearLayout android:layout_height="500dp" android:layout_width="300dp"
    android:layout_gravity="center" android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/qr210_dialog01_title1"
            android:background="#3F51B5"
            android:textColor="#FFFFFF"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="1dp"/>



        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/qr210_dialog01_title2"
            android:background="#3F51B5"
            android:textColor="#FFFFFF"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/qr210_dialog01_title3"
            android:background="#3F51B5"
            android:textColor="#FFFFFF"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/qr210_dialog01_title4"
            android:background="#3F51B5"
            android:textColor="#FFFFFF"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"/>





    </LinearLayout>
    <ListView
        android:id="@+id/qr210_dialog01_list01"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="14"
        android:background="#A9EDBB"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"/>
    <Button
        android:id="@+id/qr210_dialog01_btn01"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:textSize="12dp"
        android:text="@string/qr210_dialog01_btn01"/>
</LinearLayout>