<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CheckDateTime">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="0.5"
                android:background="#3F51B5"
                android:gravity="center"
                android:text="@string/qr230_title1"
                android:textSize="18sp"
                android:textColor="#FFFFFF" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="4"
                android:background="#3F51B5"
                android:gravity="center"
                android:text="@string/qr230_head1"
                android:textSize="18sp"
                android:textColor="#FFFFFF" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="#3F51B5"
                android:gravity="center"
                android:text="@string/qr230_title4"
                android:textSize="18sp"
                android:textColor="#FFFFFF" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="#3F51B5"
                android:gravity="center"
                android:text="@string/qr230_title5"
                android:textSize="18sp"
                android:textColor="#FFFFFF" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="4"
                android:background="#3F51B5"
                android:gravity="center"
                android:text="@string/qr230_title2"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="2"
                android:background="#3F51B5"
                android:gravity="center"
                android:text="@string/qr230_title6"
                android:textSize="18sp"
                android:textColor="#FFFFFF" />

        </LinearLayout>

        <ListView
            android:id="@+id/lv_check_dt"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="14"
            android:background="#A9EDBB" />


    </LinearLayout>
</LinearLayout>