<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editID"
        android:layout_width="150sp"
        android:layout_height="40sp"
        android:layout_marginTop="100sp"
        android:inputType="textCapCharacters"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintHorizontal_bias="0.681"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="150sp"
        android:layout_height="40sp"
        android:layout_marginTop="10sp"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="@+id/editID"
        app:layout_constraintTop_toBottomOf="@+id/editID" />

    <TextView
        android:id="@+id/viewID"
        android:layout_width="wrap_content"
        android:layout_height="30sp"
        android:text="@string/main_id"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/editID"
        app:layout_constraintRight_toLeftOf="@+id/editID"/>
    <TextView
        android:id="@+id/viewPassoword"
        android:layout_width="wrap_content"
        android:layout_height="30sp"
        android:text="@string/main_pwd"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintRight_toLeftOf="@+id/editPassword"
        app:layout_constraintBottom_toBottomOf="@+id/editPassword"/>

    <Button
        android:id="@+id/btnlogin"
        android:layout_width="100sp"
        android:layout_height="50sp"
        android:background="@drawable/button_type_nomal"
        android:text="@string/main_ok"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/btnback"
        app:layout_constraintEnd_toStartOf="@+id/btnback"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintRight_toLeftOf="@+id/btnback"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TVSaveCheck"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btnback"
        android:layout_width="100sp"
        android:layout_height="50sp"
        android:layout_marginTop="60dp"
        android:background="@drawable/button_type_nomal"
        android:text="@string/main_cancel"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.697"
        app:layout_constraintRight_toRightOf="@+id/editPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPassword" />

    <Button
        android:id="@+id/btnlanguage"
        android:layout_width="120sp"
        android:layout_height="50sp"
        android:text="@string/main_language"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:layout_marginTop="10sp"
        android:layout_marginLeft="10sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@drawable/button_type_nomal"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/btnlanguage"
        app:layout_constraintTop_toBottomOf="@+id/btnlanguage"
        android:id="@+id/onlinecheck"
        android:visibility="invisible"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tonlinecheck"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@+id/onlinecheck"
        app:layout_constraintBaseline_toBaselineOf="@id/onlinecheck"
        android:text="Offline"
        android:textSize="12sp"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/tv_ver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="viewEnd"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <CheckBox
        android:id="@+id/SaveCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginTop="12dp"
        android:buttonTint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewPassoword" />

    <TextView
        android:id="@+id/TVSaveCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_stay_logged"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@id/SaveCheck"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.133"
        app:layout_constraintLeft_toRightOf="@+id/SaveCheck"
        app:layout_constraintStart_toEndOf="@+id/SaveCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>